@@ -311,6 +311,8 @@ my $build = OpenGuides::Build->new(
         'URI::Escape'                         => 0,
         'XML::RSS'                            => 0,
         'Data::Validate::URI'                 => 0,
+        'Net::Netmask'                        => 0,
+        'List::Utils'                         => 0,
         },
     build_requires => {
         'Module::Build' => '0.26', # API change for accessing config data
